--- a/css/style.css
+++ b/css/style.css
@@ -108,4 +108,73 @@
   background-color: rgba(255, 255, 255, 0.2);
 }
 
+.exams__content {
+  font-family: "Inter", sans-serif;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-top: 47px;
+  padding-bottom: 63px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 20px;
+}
+.exams__title {
+  font-size: 45px;
+  font-weight: 700;
+  background: linear-gradient(to right, #1173D4 0%, #33CC73 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+}
+.exams__text {
+  width: 100%;
+  max-width: 950px;
+  margin-bottom: 26px;
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
+  color: #04031C;
+}
+.exams__cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 63px;
+}
+.exams__card {
+  width: 100%;
+  max-width: 282px;
+  padding: 15px 18px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 10px;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2509803922);
+  transition: transform 0.25s ease, box-shadow 0.25s ease;
+}
+.exams__card:hover {
+  transform: translateY(-8px);
+  box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.3137254902);
+}
+.exams__icon {
+  width: 48px;
+  height: 48px;
+}
+.exams__card-title {
+  padding: 30px 0 14px 0;
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+}
+.exams__card-text {
+  font-size: 18px;
+  text-align: center;
+}
+
 /*# sourceMappingURL=style.css.map */
