--- a/css/style.css
+++ b/css/style.css
@@ -177,4 +177,73 @@
   text-align: center;
 }
 
+.female {
+  background-color: #FDEFEF;
+}
+.female__content {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 40px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.female__title {
+  font-size: 45px;
+  font-weight: 700;
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  background: linear-gradient(90deg, rgba(249, 1, 111, 0.54) 0%, rgba(147, 8, 133, 0.619615) 41.83%, rgba(208, 56, 170, 0.754793) 70.19%, #851c87 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+  margin: 20px 0 54px 0;
+}
+.female__cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 40px;
+  font-family: "Roboto", sans-serif;
+}
+.female__card {
+  width: 100%;
+  max-width: 280px;
+  min-height: 400px;
+  padding: 20px 25px;
+  border-radius: 10px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2509803922);
+  text-align: center;
+  background-color: #FEFEFE;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+.female__card-title {
+  font-size: 20px;
+  font-weight: 600;
+  font-family: "Roboto", sans-serif;
+  margin: 20px 0 15px 0;
+  text-align: center;
+}
+.female__list {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: start;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+}
+.female__icon {
+  width: 105px;
+  height: 105px;
+  margin-bottom: 15px;
+}
+
 /*# sourceMappingURL=style.css.map */
