--- a/scss/_female.scss
+++ b/scss/_female.scss
@@ -9,13 +9,16 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
+        gap: 20px;
     }
 
     &__title {
         font-size: 45px;
         font-weight: 700;
-        text-align: center;
         font-family: 'Inter', sans-serif;
+        text-align: center;
+        margin: 20px 0 54px 0;
+
         background: linear-gradient(
             90deg,
             rgba(249, 1, 111, 0.54) 0%,
@@ -27,7 +30,6 @@
         -webkit-text-fill-color: transparent;
         background-clip: text;
         color: transparent;
-        margin: 20px 0 54px 0;
     }
 
     &__cards {
@@ -43,39 +45,31 @@
         max-width: 280px;
         min-height: 400px;
         padding: 20px 25px;
-        border-radius: 10px;
-        box-shadow: 0 4px 20px #00000040;
-        text-align: center;
-        background-color: #FEFEFE;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: flex-start;
+        text-align: center;
+        border-radius: 10px;
+        box-shadow: 0 4px 20px #00000040;
+        background-color: #FEFEFE;
     }
 
     &__card-title {
         font-size: 20px;
         font-weight: 600;
-        font-family: 'Roboto', sans-serif;
-        margin: 20px 0 15px 0;
         text-align: center;
+        margin: 20px 0 15px 0;
     }
 
     &__list {
         display: flex;
         flex-direction: column;
         gap: 6px;
-        font-size: 14px;
-        line-height: 20px;
-        text-align: start;
         margin: 0;
         padding: 0;
         font-family: 'Roboto', sans-serif;
-    }
-
-    &__icon {
-        width: 105px;
-        height: 105px;
-        margin-bottom: 15px;
+        font-size: 14px;
+        line-height: 20px;
+        text-align: start;
     }
 }
