--- a/css/style.css
+++ b/css/style.css
@@ -308,4 +308,91 @@
   text-align: start;
 }
 
+.alerts {
+  background-color: #FFFFFF;
+}
+.alerts__content {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 40px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  text-align: center;
+}
+.alerts__title {
+  font-size: 40px;
+  font-weight: 700;
+  font-family: "Inter", sans-serif;
+  margin-bottom: 10px;
+  background: linear-gradient(to right, #1173D4 0%, #33CC73 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+}
+.alerts__cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+.alerts__card {
+  width: 100%;
+  max-height: 141px;
+  max-width: 416px;
+  padding: 10px 24px 20px;
+  border-radius: 10px;
+  background-color: #FFF;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1254901961);
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+}
+.alerts__card--pink {
+  background-color: #F9D5E5;
+}
+.alerts__card--pink .alerts__card-title,
+.alerts__card--pink .alerts__card-text {
+  color: #AD346A;
+}
+.alerts__card--blue {
+  background-color: #CFE2F3;
+}
+.alerts__card--blue .alerts__card-title,
+.alerts__card--blue .alerts__card-text {
+  color: #2769A3;
+}
+.alerts__card--green {
+  background-color: #D4EDDA;
+}
+.alerts__card--green .alerts__card-title,
+.alerts__card--green .alerts__card-text {
+  color: #244A2D;
+}
+.alerts__card--orange {
+  background-color: #FFE9C2;
+}
+.alerts__card--orange .alerts__card-title,
+.alerts__card--orange .alerts__card-text {
+  color: #976C00;
+}
+.alerts__card-header {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 17px;
+}
+.alerts__card-title {
+  font-size: 20px;
+  font-weight: 700;
+  font-family: "Inter", sans-serif;
+}
+.alerts__card-text {
+  font-size: 16px;
+  line-height: 20px;
+  font-family: "Roboto", sans-serif;
+}
+
 /*# sourceMappingURL=style.css.map */
