--- a/scss/_alerts.scss
+++ b/scss/_alerts.scss
@@ -35,9 +35,9 @@
 
     &__card {
         width: 100%;
-        max-height: 141px;
+        min-height: 141px;
         max-width: 416px;
-        padding: 10px 24px 20px;
+        padding: 10px 24px;
         border-radius: 10px;
         background-color: #FFF;
         box-shadow: 0 4px 20px #00000020;
@@ -89,7 +89,7 @@
         display: flex;
         align-items: center;
         gap: 10px;
-        margin-bottom: 17px;
+        margin-bottom: 6px;
     }
 
     &__card-title {
