--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,117 +1,167 @@
 .header {
-  height: 90vh;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  background-image: url("../images/banner-header.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-
-  &__wrap {
-    width: 1117px;
-    margin-top: 63px;
-    height: 57px;
-    border-radius: 50px;
+    height: 90vh;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    background: linear-gradient(to right, #4247a2 0%, #52b095 100%);
-    padding: 0 57px;
-  }
+    flex-direction: column;
+    background-image: url("../images/banner-header.png");
+    background-size: contain;
+    background-repeat: no-repeat;
 
-  &__logo img {
-    display: block;
-    height: 40px;
-  }
-
-  &__nav {
-    &-list {
-      display: flex;
-      list-style: none;
-      gap: 37px;
-      align-items: center;
-    }
-
-    &-link {
-      font-family: "Roboto", sans-serif;
-      color: white;
-      font-family: "Roboto", sans-serif;
-      font-weight: 400;
-      font-size: 20px;
-      text-decoration: none;
-    }
-  }
-
-  &__banner {
-    font-family: "Inter", sans-serif;
-    width: 72%;
-    height: 100%;
-    display: flex;
-    align-items: center; 
-    justify-content: flex-start;
-
-    .banner__content {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      text-align: start;
-      max-width: 568px;
-
-      .banner__title {
-        background: linear-gradient(to right, #1173D4 0%, #33CC73 100%);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
-        color: transparent;
-        font-weight: 700;
-        font-size: 45px;
-        margin-bottom: 20px;
-      }
-
-      .banner__subtitle {
-        font-size: 26px;
-        color: #04031C;
-        font-weight: 400;
-        margin-bottom: 20px;
-      }
-
-      .banner__buttons {
-        padding-top: 48px;
+    &__wrap {
+        width: 100%;
+        max-width: 1200px;
+        margin-top: 63px;
+        height: 57px;
+        border-radius: 50px;
         display: flex;
-        gap: 20px;
-
-        .banner__button {
-          padding: 10px 20px;
-          border-radius: 10px;
-          text-decoration: none;
-          font-weight: 500;
-          height: 44px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-          &--primary {
-            background-color: #1173D4;
-            color: white;
-            width: 257px;
-
-            &:hover {
-              background-color: darken(#1173D4, 10%);
-            }
-          }
-
-          &--secondary {
-            color: #1173D4;
-            background-color: transparent;
-            border: 1px solid #1173D4;
-            width: 162px;
-
-            &:hover {
-              background-color: rgba(255, 255, 255, 0.2);
-            }
-          }
-        }
-      }
+        align-items: center;
+        justify-content: space-between;
+        background: linear-gradient(to right, #4247a2 0%, #52b095 100%);
+        padding: 0 57px;
     }
-  }
+
+    &__logo img {
+        display: block;
+        height: 40px;
+    }
+
+    &__nav {
+        &-list {
+            display: flex;
+            list-style: none;
+            gap: 37px;
+            align-items: center;
+        }
+
+        &-link {
+            font-family: "Roboto", sans-serif;
+            color: white;
+            font-family: "Roboto", sans-serif;
+            font-weight: 400;
+            font-size: 20px;
+            text-decoration: none;
+        }
+    }
+
+    &__banner {
+        font-family: "Inter", sans-serif;
+        width: 72%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+
+        .banner__content {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            text-align: start;
+            max-width: 568px;
+            width: 100%;
+
+            .banner__title {
+                background: linear-gradient(to right, #1173D4 0%, #33CC73 100%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                background-clip: text;
+                color: transparent;
+                font-weight: 700;
+                font-size: 45px;
+                margin-bottom: 20px;
+            }
+
+            .banner__subtitle {
+                font-size: 26px;
+                color: #04031C;
+                font-weight: 400;
+                margin-bottom: 20px;
+            }
+
+            .banner__buttons {
+                width: 100%;
+                padding-top: 48px;
+                display: flex;
+                gap: 20px;
+
+                .banner__button {
+                    padding: 10px 20px;
+                    border-radius: 10px;
+                    text-decoration: none;
+                    font-weight: 500;
+                    height: 44px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    &--primary {
+                        background-color: #1173D4;
+                        color: white;
+                        width: 257px;
+
+                        &:hover {
+                            background-color: darken(#1173D4, 10%);
+                        }
+                    }
+
+                    &--secondary {
+                        color: #1173D4;
+                        background-color: transparent;
+                        border: 1px solid #1173D4;
+                        width: 162px;
+
+                        &:hover {
+                            background-color: rgba(255, 255, 255, 0.2);
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 767px) {
+    .header {
+        background-image: none;
+        padding: 20px;
+
+        &__wrap {
+            width: 100%;
+            max-width: none;
+            padding: 20px;
+        }
+
+        &__logo img {
+            width: 90px;
+            height: auto;
+        }
+
+        .banner__content {
+            text-align: center;
+
+        }
+
+        .banner__title,
+        .banner__subtitle {
+            font-size: 14px;
+        }
+
+        &__nav-link {
+            font-size: 14px;
+
+            &.masculina::after {
+                content: "Prevenção Mas";
+            }
+
+            &.feminina::after {
+                content: "Prevenção Fem";
+            }
+
+            &.masculina span,
+            &.feminina span {
+                display: none;
+            }
+
+        }
+
+    }
 }
