--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Chau+Philomene+One:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 * {
   margin: 0;
@@ -16,7 +17,8 @@
   background-repeat: no-repeat;
 }
 .header__wrap {
-  width: 1117px;
+  width: 100%;
+  max-width: 1200px;
   margin-top: 63px;
   height: 57px;
   border-radius: 50px;
@@ -58,6 +60,7 @@
   align-items: flex-start;
   text-align: start;
   max-width: 568px;
+  width: 100%;
 }
 .header__banner .banner__content .banner__title {
   background: linear-gradient(to right, #1173D4 0%, #33CC73 100%);
@@ -76,6 +79,7 @@
   margin-bottom: 20px;
 }
 .header__banner .banner__content .banner__buttons {
+  width: 100%;
   padding-top: 48px;
   display: flex;
   gap: 20px;
@@ -108,6 +112,40 @@
   background-color: rgba(255, 255, 255, 0.2);
 }
 
+@media (max-width: 767px) {
+  .header {
+    background-image: none;
+    padding: 20px;
+  }
+  .header__wrap {
+    width: 100%;
+    max-width: none;
+    padding: 20px;
+  }
+  .header__logo img {
+    width: 90px;
+    height: auto;
+  }
+  .header .banner__content {
+    text-align: center;
+  }
+  .header .banner__title,
+  .header .banner__subtitle {
+    font-size: 14px;
+  }
+  .header__nav-link {
+    font-size: 14px;
+  }
+  .header__nav-link.masculina::after {
+    content: "Prevenção Mas";
+  }
+  .header__nav-link.feminina::after {
+    content: "Prevenção Fem";
+  }
+  .header__nav-link.masculina span, .header__nav-link.feminina span {
+    display: none;
+  }
+}
 .exams__content {
   font-family: "Inter", sans-serif;
   width: 100%;
@@ -177,6 +215,18 @@
   text-align: center;
 }
 
+@media (max-width: 767px) {
+  .exams__title {
+    font-size: 24px;
+  }
+  .exams__text {
+    font-size: 20px;
+    padding: 0 15px;
+  }
+  .exams__cards {
+    flex-direction: column;
+  }
+}
 .female {
   background-color: #FDEFEF;
 }
@@ -240,6 +290,14 @@
   text-align: start;
 }
 
+@media (max-width: 767px) {
+  .female__title {
+    font-size: 32px;
+  }
+  .female__cards {
+    flex-direction: column;
+  }
+}
 .male {
   background-color: #F8F9FA;
 }
@@ -308,6 +366,14 @@
   text-align: start;
 }
 
+@media (max-width: 767px) {
+  .male__title {
+    font-size: 32px;
+  }
+  .male__cards {
+    flex-direction: column;
+  }
+}
 .alerts {
   background-color: #FFFFFF;
 }
@@ -395,6 +461,11 @@
   font-family: "Roboto", sans-serif;
 }
 
+@media (max-width: 767px) {
+  .alerts__title {
+    font-size: 24px;
+  }
+}
 .footer {
   background-color: #313461;
   color: #fff;
@@ -472,6 +543,13 @@
   font-weight: 400;
   color: #fff;
   line-height: 20px;
+}
+
+@media (max-width: 767px) {
+  .footer__top {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
