--- a/scss/_alerts.scss
+++ b/scss/_alerts.scss
@@ -104,3 +104,11 @@
         font-family: 'Roboto', sans-serif;
     }
 }
+
+@media (max-width: 767px) {
+    .alerts {
+        &__title {
+            font-size: 24px;
+        }
+    }
+}
