--- a/scss/_female.scss
+++ b/scss/_female.scss
@@ -19,13 +19,11 @@
         text-align: center;
         margin: 20px 0 54px 0;
 
-        background: linear-gradient(
-            90deg,
-            rgba(249, 1, 111, 0.54) 0%,
-            rgba(147, 8, 133, 0.619615) 41.83%,
-            rgba(208, 56, 170, 0.754793) 70.19%,
-            #851c87 100%
-        );
+        background: linear-gradient(90deg,
+                rgba(249, 1, 111, 0.54) 0%,
+                rgba(147, 8, 133, 0.619615) 41.83%,
+                rgba(208, 56, 170, 0.754793) 70.19%,
+                #851c87 100%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
@@ -71,5 +69,17 @@
         font-size: 14px;
         line-height: 20px;
         text-align: start;
+    }
+}
+
+@media (max-width: 767px) {
+    .female {
+        &__title {
+            font-size: 32px;
+        }
+
+        &__cards {
+            flex-direction: column;
+        }
     }
 }
