--- a/scss/_exams.scss
+++ b/scss/_exams.scss
@@ -14,17 +14,16 @@
         align-items: center;
         text-align: center;
         gap: $space-md;
+        background-color: $bg-male ;
     }
 
     &__title {
         font-size: $font-size-xxl;
         font-weight: $font-weight-bold;
 
-        background: linear-gradient(
-            to right,
-            map-get($alerts-title-gradient, start) 0%,
-            map-get($alerts-title-gradient, end) 100%
-        );
+        background: linear-gradient(to right,
+                map-get($alerts-title-gradient, start) 0%,
+                map-get($alerts-title-gradient, end) 100%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
@@ -66,7 +65,7 @@
 
         &:hover {
             transform: translateY(-8px);
-            box-shadow: 0px 8px 25px rgba(0,0,0,0.31);
+            box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.31);
         }
     }
 
@@ -78,13 +77,13 @@
     &__card-title {
         padding: $space-lg 0 $space-sm 0;
 
-        font-size: $font-size-md; 
+        font-size: $font-size-md;
         font-weight: $font-weight-semibold;
         text-align: center;
     }
 
     &__card-text {
-        font-size: $font-size-sm; 
+        font-size: $font-size-sm;
         text-align: center;
     }
 }
@@ -96,8 +95,8 @@
         }
 
         &__text {
-            font-size: $font-size-md; 
-            padding: 0 $space-md; 
+            font-size: $font-size-md;
+            padding: 0 $space-md;
         }
 
         &__cards {
