--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -124,6 +124,8 @@
     .header {
         background-image: none;
         padding: $space-md;
+        min-height: 600px;
+        height: auto;
 
         &__wrap {
             margin-top: 0;
@@ -136,6 +138,11 @@
             width: 90px;
             height: auto;
 
+        }
+
+        .banner__content{
+            text-align: center;
+            padding-top: $space-header-top;
         }
 
         .banner__button {
