--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -30,6 +30,8 @@ $alerts-title-gradient: (
 );
 
 $card-shadow: rgba(0, 0, 0, 0.25);
+$shadow-header: 6px 6px 10px 1px $card-shadow;
+
 
 $alert-bg: (
   pink: #F9D5E5,
