--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@
     width: 100%;
     max-width: none;
     padding: 20px;
+    box-shadow: 6px 6px 10px 1px rgba(0, 0, 0, 0.25);
   }
   .header__logo img {
     width: 90px;
